start-sanitize-sky
Mon Feb 23 15:55:12 1998  Doug Evans  <devans@canuck.cygnus.com>

	* config/tc-dvp.c (assemble_dma): Do alignment before parsing insn.
	(setup_dma_autocount): Renamed from setup_autocount.  New argument
	inline_p.  All callers changed.  Fix word address of count.
	(parse_dma_addr_autocount): Fix word address of address.

end-sanitize-sky
start-sanitize-sky
Mon Feb 23 17:24:06 1998  Jim Lemke  <jlemke@cygnus.com>

	* config/obj-elf.c: Take Ian's suggestion, leave .bss etc
	in special_sections table and add .vubss etc via
	ELF_TC_SPECIAL_SECTIONS.
	* config/tc-dvp.h: Likewise.

end-sanitize-sky
Mon Feb 23 11:29:06 1998  Doug Evans  <devans@seba.cygnus.com>

	* cgen.c: #include symcat.h.
	* config/tc-m32r.c: Likewise.

Mon Feb 23 10:27:40 1998  Jeffrey A Law  (law@cygnus.com)

	* config/tc-mips.c (mips_ip, case 'P'): Make 'P' arguments be
	absolute expressions instead of '$' prefixed register names.

Sat Feb 21 22:36:52 1998  Richard Henderson  <rth@cygnus.com>

	* read.c (s_set): Record file and line info for symbols when -as.
	(pseudo_set): Don't overwrite that dummy fragment.

start-sanitize-sky
Fri Feb 20 12:43:02 1998  Doug Evans  <devans@canuck.cygnus.com>

	* config/tc-dvp.c (md_assemble): Handle ASM_DIRECT state.
	(dvp_parse_done): Comment out contents.
	(s_enddirect,s_endmpg,s_endunpack): Call demand_empty_rest_of_line.
	(s_state): Handle .vu in included file.
	(asm_state): New state ASM_GIF.
	(asm_state_stack): Maintain stack of parsing states.
	({push,pop,set}_asm_state): New functions.
	(CUR_ASM_STATE): Renamed from cur_asm_state, all uses updated.
	(gif_{insn_type,data_name,insn_frag}): New static locals.
	(md_assemble): Watch for .endgif if in ASM_GIF state.
	(assemble_gif): Complete.
	(s_endgif): Complete.
	(cur_mach): New static local.
	(record_mach): New function.
	(md_begin): Initialize `cur_mach'.
	(assemble_*): Record current mach type.
	(vu_count): New static local.