@@ -1,4 +1,9 @@
 start-sanitize-sky
+Tue Feb 24 11:01:25 1998  Doug Evans  <devans@canuck.cygnus.com>
+
+	* config/tc-dvp.h (tc_frob_label): Define.
+	* config/tc-dvp.c (dvp_frob_label): New function.
+
 Mon Feb 23 15:55:12 1998  Doug Evans  <devans@canuck.cygnus.com>
 
 	* config/tc-dvp.c (assemble_dma): Do alignment before parsing insn.
